# openzeppelin-community-contracts

./: .cache-421614.json  .cache-84532.json  .codecov.yml  .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  FUNDING.json  README.md  SECURITY.md  TOOLING.md  foundry.toml  hardhat.config.js  package-lock.json  package.json  remappings.txt  slither.config.json
.github/: CODEOWNERS
.github/workflows/: checks.yml  docs.yml  vendor.yml
audits/: README.md
contracts/: ERC20Rebasing.sol
contracts/access/: README.adoc
contracts/account/: Account.sol  AccountCore.sol  AccountFactory.sol  README.adoc  RoleAccount.sol  VirtualRelayer.sol  draft-Account.sol  draft-AccountBase.sol  draft-AccountCore.sol  draft-AccountECDSA.sol  draft-AccountP256.sol  draft-AccountRSA.sol
contracts/crosschain/: ERC20Bridge.sol  ERC7786Aggregator.sol  ERC7786OpenBridge.sol  ERC7786Router.sol  ERC7802Bridge.sol  Gateway.sol  GatewayAdapterBase.sol  GatewayAxelar.sol  GatewayAxelarCAIP2.sol  GatewayDestination.sol  GatewaySource.sol  GenericGatewayAxelar.sol  GenericGatewayCommon.sol  ICAIP2Equivalence.sol  ICAIP2GatewayEquivalence.sol  IGateway.sol  IGatewayCommon.sol  IGatewayDestination.sol  IGatewayDestinationPassive.sol  IGatewayIncoming.sol  IGatewayIncomingPassive.sol  IGatewayOutgoing.sol  IGatewayReceiver.sol  (+4 more)
deployment/: config.js  deploy.js  tests.md
docs/: index.md
hardhat/: remappings.js
scripts/: gen-nav.js  prepare-docs.sh
scripts/generate-zkemail-proof/: Cargo.toml
scripts/generate-zkemail-proof/src/: main.rs
technical-docs/: erc-xxxx.md  erc-yyyy.md
(+472 files in other folders)
