[package]
name = "zkemail-proof-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
email-tx-builder = { git = "https://github.com/zkemail/email-tx-builder.git", package = "email-tx-builder-relayer" }
ethers = { version = "2.0", features = ["abigen", "legacy"] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "main" }
reqwest = { version = "0.11", features = ["json"] }
sled = "0.34"
slog = "2.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
